[project]
name = "wikipedia-dead-ref-finder"
version = "1.0.0"
description = "A tool to check for dead external links in top Wikipedia articles"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "tqdm>=4.60.0",
    "selenium>=4.0.0",
    "polars>=0.20.0",
    "psutil>=5.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
]
